# Algorithms

./: README.md
1 semester/2. Sorting/: Advanced Qsort.cpp  Binary MSD for long long.cpp  Complete polygon.cpp  Inversions number.cpp  Order statistic.cpp  Straight painting.cpp
1 semester/3. Trees/: In-order binary tree bypass.cpp  Soldiers.cpp  Treap. Width difference.cpp
1 semester/4. Hashing and dynamic/: Conversation requests.cpp  Hash table in open addressing.cpp  High pyramid.cpp  Sum of tree's distances.cpp
2 semester/1. Graph bypass/: B. Length-minimal cycle.cpp  C. Different ways count.cpp  D. Bipartite graph.cpp  E. Planar graph.cpp  F. Addition to connected graph.cpp
2 semester/2. Shortest path in edge-weighted graph/: A. Cities.cpp  B. Trade Arbitrage.cpp  C. Eight pockets.cpp  D. Barley-break.cpp  E. FloydWarshall.cpp
2 semester/TSP/: CMakeLists.txt  README.md  results  statistic.cpp
2 semester/TSP/tsp_problem/: CMakeLists.txt  christofides_tsp_solution.cpp  christofides_tsp_solution.h  double_tsp_solution.cpp  double_tsp_solution.h  exact_tsp_solution.cpp  exact_tsp_solution.h
2 semester/TSP/tsp_problem/graph/: CMakeLists.txt  graph_funcs.cpp  graph_funcs.h  set_graph.cpp  set_graph.h
2 semester/TSP/tsp_problem/graph/disjoint_set/: CMakeLists.txt  disjoint_set.cpp  disjoint_set.h
2 semester/TSP/tsp_problem/graph/edge/: CMakeLists.txt  edge.h
3 semester/: Makefile  README.md  main.cpp
3 semester/1.2/: B2.cpp
3 semester/2.1/: suffix_array.hpp
3 semester/2.2/: main.cpp
3 semester/2.3/: Makefile
3 semester/4. Big integer/: README.md  (+1 more)
(+76 files in other folders)
